//
// Created by Dråfølin on 12.12.2023.
//

#ifndef JUMPICON_H
#define JUMPICON_H

#include "hudicon.h"

class JumpIcon final : public HudIcon {
public:
    explicit JumpIcon(QGraphicsItem *pParent = nullptr);
};


#endif //JUMPICON_H
